add test map, map coverage 100%, fix mini bugs

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ ifeq ($(shell uname), Linux)
 	OPEN = xdg-open
 endif
 
-SOURCE = test/test_tree.cpp
+SOURCE = test/test_map.cpp
 
 .PHONY: all
 all: gcov_report
@@ -38,7 +38,7 @@ style:
 
 .PHONY: get_style
 get_style:
-	clang-format -i -style=Google red_black_tree/*.h red_black_tree/*.tpp map/*.h map/*.tpp test/test_tree.cpp
+	clang-format -i -style=Google red_black_tree/*.h red_black_tree/*.tpp map/*.h map/*.tpp test/*.cpp
 
 
 .PHONY: valgrind
